<resources>
    <string name="app_name">QuotesTemplate</string>

    <string name="authors">Авторы</string>
    <string name="categories">Категории</string>
    <string name="history">История</string>
    <string name="favorites">Любимые</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>