<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_authors"
        android:icon="@drawable/baseline_123_24"
        android:title="@string/authors" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/baseline_123_24"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_123_24"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/baseline_123_24"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_123_24"
        android:title="@string/settings" />
</menu>